--- a/tasks/05_setup_first_server_node.yml
+++ b/tasks/05_setup_first_server_node.yml
@@ -7,7 +7,7 @@
 # potential issues that may arise.
 #
 # The task set finishes by waiting for the first server node to be ready, and symlinking
-# the kubeconfig and kubectl files to /root for ease of management.
+# the kubeconfig and kubectl files to /root and a bin path for ease of management.
 
 - name: Create config directories for RKE2
   ansible.builtin.file:
@@ -70,12 +70,33 @@
     state: started
     enabled: true
 
+- name: Create .kube directory in root homedir
+  ansible.builtin.file:
+    path: /root/.kube
+    state: directory
+    owner: root
+    group: root
+    mode: "0700"
+
+- name: Create symlinks for kubeconfig and kubectl
+  ansible.builtin.file:
+    path: "{{ item['path'] }}"
+    src: "{{ item['src'] }}"
+    state: link
+    owner: root
+    group: root
+  loop:
+    - path: /root/.kube/config
+      src: /etc/rancher/rke2/rke2.yaml
+    - path: "{{ bin_dir }}/kubectl"
+      src: /var/lib/rancher/rke2/bin/kubectl
+
 - name: Wait for the first server to be ready
-  ansible.builtin.shell: "set -o pipefail {{ bin_dir }}/kubectl --kubeconfig /etc/rancher/rke2/rke2.yaml get nodes | grep '{{ inventory_hostname }}'"
+  ansible.builtin.shell: "set -o pipefail {{ bin_dir }}/kubectl --kubeconfig /root/.kube/config get nodes | grep '{{ inventory_hostname }}'"
   args:
     executable: /bin/bash
   changed_when: false
   register: first_server_progress
-  until: '" Ready " in first_server_progress.stdout'
+  until: "' Ready ' in first_server_progress['stdout']"
   retries: 60
   delay: 15
