--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,25 +1,27 @@
 ---
 # Connected
 
-- name: 00_prerequisites
+- name: 00 - Prerequisite check
   ansible.builtin.include_tasks: 00_prerequisites.yml
 
 # 01_configure_local_ha
 
-- name: 02_download_and_install_rke2
+- name: 02 - Download and install RKE2 setup files
   ansible.builtin.include_tasks: 02_download_and_install_rke2.yml
 
-- name: 03_cis_hardening
+- name: 03 - Apply requirements for CIS hardening
   ansible.builtin.include_tasks: 03_cis_hardening.yml
 
 # 04_configure_any_additional_required_confs
 
-- name: 05_setup_first_server_node
+- name: 05 - Setup first server node
   ansible.builtin.include_tasks: 05_setup_first_server_node.yml
 
-# 06_setup_additional_server_nodes
+- name: 06 - Setup any remaining server nodes
+  ansible.builtin.include_tasks: 06_setup_remaining_nodes.yml
 
-# 07_completion_summary
+- name: 07 - Summary output for the cluster installation
+  ansible.builtin.include_tasks: 07_summary.yml
 
 
 # Airgapped
