--- a/handlers/main.yml
+++ b/handlers/main.yml
@@ -3,3 +3,8 @@
   ansible.builtin.service:
     name: systemd-sysctl
     state: restarted
+
+- name: Restart keepalived
+  ansible.builtin.service:
+    name: keepalived
+    state: restarted
