--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -16,9 +16,11 @@
 # 04_configure_any_additional_required_confs
 
 - name: 05 - Setup first server node
+  when: inventory_hostname == ansible_play_hosts_all[0]
   ansible.builtin.include_tasks: 05_setup_first_server_node.yml
 
 - name: 06 - Setup any remaining server nodes
+  when: inventory_hostname != ansible_play_hosts_all[0]
   ansible.builtin.include_tasks: 06_setup_remaining_nodes.yml
 
 - name: 07 - Summary output for the cluster installation
