--- a/tasks/02_download_and_install_rke2.yml
+++ b/tasks/02_download_and_install_rke2.yml
@@ -18,37 +18,37 @@
   ansible.builtin.command:
     cmd: "{{ work_dir }}/install.sh"
   environment:
-    INSTALL_RKE2_CHANNEL: "{{ rke2_cluster_channel | default('stable') }}"
-    INSTALL_RKE2_TYPE: "{{ inventory_hostname['rke2_node_type'] }}"
-    INSTALL_RKE2_VERSION: "{{ rke2_cluster_version }}"
+    INSTALL_RKE2_CHANNEL: "{{ cluster['channel'] | default('stable') }}"
+    INSTALL_RKE2_TYPE: "{{ hostvars[inventory_hostname]['node_type'] }}"
+    INSTALL_RKE2_VERSION: "{{ cluster['version'] }}"
   changed_when: true
 
 - name: Create custom manifests for implementation (if required)
-  when: rke2_cluster_custom_manifests_required | bool
+  when: cluster['custom_manifests_required'] | bool
   ansible.builtin.template:
     src: "{{ item }}"
     dest: "{{ rke2_data_path }}/server/manifests/"
     owner: root
     group: root
     mode: "0644"
-  loop: "{{ rke2_cluster_custom_manifests }}"
+  loop: "{{ cluster['custom_manifests'] }}"
 
 - name: Create static pod manifests for implementation (if required)
-  when: rke_cluster_custom_static_pods_required | bool
+  when: cluster['custom_static_pods_required'] | bool
   ansible.builtin.template:
     src: "{{ item }}"
     dest: "{{ rke2_data_path }}/agent/pod-manifests/"
     owner: root
     group: root
     mode: "0644"
-  loop: "{{ rke2_cluster_custom_static_pods }}"
+  loop: "{{ cluster['custom_static_pods'] }}"
 
 - name: Create RKE2 environment file
-  when: rke2_cluster_environment_options_required | bool
+  when: cluster['environment_options_required'] | bool
   ansible.builtin.template:
     src: "{{ item }}"
-    dest: "/etc/default/rke2-{{ rke2_node_type }}"
+    dest: "/etc/default/rke2-{{ hostvaras[inventory_hostname]['node_type'] }}"
     owner: root
     group: root
     mode: "0644"
-  loop: "{{ rke2_cluster_environment_options }}"
+  loop: "{{ cluster['environment_options'] }}"
