--- a/tasks/00_prerequisites.yml
+++ b/tasks/00_prerequisites.yml
@@ -29,7 +29,7 @@
   ansible.builtin.lineinfile:
     path: /etc/hosts
     insertafter: EOF
-    line: "{{ rke2_api_ip }} {{ rke2_api_fqdn }}"
+    line: "{{ cluster['api_ip'] }} {{ cluster['api_fqdn'] }}"
     owner: root
     group: root
     mode: '0644'
@@ -38,17 +38,17 @@
 # while maintaining a logical structure for the variable definition in the execution playbook.
 
 - name: Set proxy variables if a proxy is required
-  when: proxy_required | bool
+  when: proxy['required'] | bool
   block:
     - name: Set http_proxy
       ansible.builtin.set_fact:
-        http_proxy: "{{ proxy_http_proxy }}"
+        http_proxy: "{{ proxy['http_proxy'] }}"
     - name: Set https_proxy
       ansible.builtin.set_fact:
-        https_proxy: "{{ proxy_https_proxy }}"
+        https_proxy: "{{ proxy['https_proxy'] }}"
     - name: Set no_proxy
       ansible.builtin.set_fact:
-        no_proxy: "{{ proxy_no_proxy }}"
+        no_proxy: "{{ proxy['no_proxy'] }}"
 
 # Red Hat distributions utilise /usr/lib/systemd/system/ for systemd variable injection; Debian
 # distributions such as Ubuntu utilise /usr/local/lib/systemd/system/. The systemd_folder variable
