--- a/tasks/00_prerequisites.yml
+++ b/tasks/00_prerequisites.yml
@@ -23,7 +23,7 @@
     owner: root
     group: root
     mode: '0644'
-  loop: "{{ ansible_play_hosts_all }}"
+  loop: "{{ ansible_play_hosts }}"
 
 - name: Update /etc/hosts with the registration address
   ansible.builtin.lineinfile:
