--- a/tasks/00_prerequisites.yml
+++ b/tasks/00_prerequisites.yml
@@ -71,6 +71,7 @@
     keepalived_script_dir: "{{ (ansible_facts['os_family'] == 'RedHat') | ternary('/usr/libexec/keepalived', '/etc/keepalived') }}"
 
 - name: Install Helm
+  delegate_to: localhost
   block:
     - name: Download latest version string file
       ansible.builtin.get_url:
@@ -86,14 +87,15 @@
       ansible.builtin.file:
         path: /tmp/helm-version.txt
         state: absent
-    - name: Download latest Helm release tarball and unpack
-      ansible.builtin.unarchive:
-        src: "https://get.helm.sh/helm-{{ helm_version }}-linux-amd64.tar.gz"
-        dest: "{{ bin_dir }}"
-        remote_src: true
-        owner: root
-        group: root
-        mode: '0755'
+
+- name: Download latest Helm release tarball and unpack
+  ansible.builtin.unarchive:
+    src: "https://get.helm.sh/helm-{{ helm_version }}-linux-amd64.tar.gz"
+    dest: "{{ bin_dir }}"
+    remote_src: true
+    owner: root
+    group: root
+    mode: '0755'
 
 - name: Complete airgapped prerequisites (if required)
   when: airgapped | bool
