--- a/tasks/05_setup_first_server_node.yml
+++ b/tasks/05_setup_first_server_node.yml
@@ -52,6 +52,16 @@
     state: started
     enabled: true
 
+- name: Wait for the first server to be ready
+  ansible.builtin.shell: "set -o pipefail {{ bin_dir }}/kubectl --kubeconfig /root/.kube/config get nodes | grep '{{ inventory_hostname }}'"
+  args:
+    executable: /bin/bash
+  changed_when: false
+  register: first_server_progress
+  until: "' Ready ' in first_server_progress['stdout']"
+  retries: 60
+  delay: 15
+
 - name: Create .kube directory in root homedir
   ansible.builtin.file:
     path: /root/.kube
@@ -73,17 +83,7 @@
     - path: "{{ bin_dir }}/kubectl"
       src: /var/lib/rancher/rke2/bin/kubectl
 
-- name: Wait for the first server to be ready
-  ansible.builtin.shell: "set -o pipefail {{ bin_dir }}/kubectl --kubeconfig /root/.kube/config get nodes | grep '{{ inventory_hostname }}'"
-  args:
-    executable: /bin/bash
-  changed_when: false
-  register: first_server_progress
-  until: "' Ready ' in first_server_progress['stdout']"
-  retries: 60
-  delay: 15
-
 - name: Obtain value for token for second and subsequent node installs
   when: cluster['type'] != single-node
   ansible.builtin.set_fact:
-    token: "{{ lookup('ansible.builtin.file', '/var/lib/rancher/rke2/server/node-token' | split(':') | last }}"
+    token: "{{ lookup('ansible.builtin.file', '/var/lib/rancher/rke2/server/node-token') | split(':') | last }}"
