fix ready context

--- a/tasks/05_setup_first_server_node.yml
+++ b/tasks/05_setup_first_server_node.yml
@@ -53,7 +53,7 @@
     enabled: true
 
 - name: Wait for the first server to be ready
-  ansible.builtin.shell: "set -o pipefail {{ bin_dir }}/kubectl --kubeconfig /root/.kube/config get nodes | grep '{{ inventory_hostname }}'"
+  ansible.builtin.shell: "set -o pipefail /var/lib/rancher/rke2/bin/kubectl --kubeconfig /etc/rancher/rke2/rke2.yaml get node | grep '{{ inventory_hostname }}'"
   args:
     executable: /bin/bash
   changed_when: false
