--- a/tasks/05_setup_first_server_node.yml
+++ b/tasks/05_setup_first_server_node.yml
@@ -48,7 +48,7 @@
     enabled: true
 
 - name: Wait for the first server to be ready
-  ansible.builtin.shell: "set -o pipefail /var/lib/rancher/rke2/bin/kubectl --kubeconfig /etc/rancher/rke2/rke2.yaml get node | grep '{{ inventory_hostname }}'"
+  ansible.builtin.shell: "set -o pipefail /var/lib/rancher/rke2/bin/kubectl --kubeconfig /etc/rancher/rke2/rke2.yaml get node | grep '{{ hostvars[inventory_hostname]['ansible_facts']['hostname'] }}'"
   args:
     executable: /bin/bash
   changed_when: false
