--- a/tasks/05_setup_first_server_node.yml
+++ b/tasks/05_setup_first_server_node.yml
@@ -80,5 +80,14 @@
 
 - name: Obtain value for token for second and subsequent node installs
   when: cluster['type'] != 'single-node'
+  ansible.builtin.slurp:
+    src: /var/lib/rancher/rke2/server/node-token
+  register: node_token
+
+- name: Show value
+  ansible.builtin.debug:
+    msg: "{{ node_token | b64decode | split(':') | last }}"
+
+- name: Set token fact
   ansible.builtin.set_fact:
-    token: "{{ lookup('ansible.builtin.file', '/var/lib/rancher/rke2/server/node-token') | split(':') | last }}"
+    token: "{{ node_token | b64decode | split(':') | last }}"
