--- a/tasks/06_post_configuration.yml
+++ b/tasks/06_post_configuration.yml
@@ -26,7 +26,7 @@
 - name: Set specific RKE2 file permissions to meet CIS hardening requirements
   ansible.builtin.file:
     path: "{{ item }}"
-    state: present
+    state: file
     owner: root
     group: root
     mode: '0600'
